--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+.course {
+    width: 232px;
+    display: inline-block;
+    margin: 10px;
+}
+.course img {
+    height: 132px;
+    width: 99%;
+    border: 1px solid grey;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.course .title {
+    width: 100%;
+    margin: 0px;
+    margin-top: 2px;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    font-size: 15px;
+    font-weight: bolder;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.course .instructor {
+    width: 100%;
+    font-size: small;
+    font-weight: 100;
+    margin: 6px 0px 3px 0px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.course .rating {
+    font-size: large;
+    stroke: black;
+}
+.rating.checked {
+    color: darkorange;
 }
 
-.App-link {
-  color: #61dafb;
+.course .prices {
+    width: 100%;
+    margin: 3px 0px;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+.course .price {
+    font-size: large;
+    margin-right: 9px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.course .old_price {
+    font-size: small;
+    text-decoration: line-through;
 }
